Dark mode: style.css minor fixes

--- a/dark mode/style.css
+++ b/dark mode/style.css
@@ -1,6 +1,3 @@
-Ecco il codice CSS aggiornato:
-
-```css
 * {
     margin: 0;
     padding: 0;
@@ -55,7 +52,7 @@ main {
     background-color: #2A2A2A; 
     border-right: 1px solid #333; 
     padding: 10px;
-    height: calc(80vh - 100px);
+    height: calc(90vh - 100px);
     overflow-y: auto;
 }
 
@@ -129,7 +126,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: calc(80vh - 100px);
+    height: calc(90vh - 100px);
 }
 
 .chat-header {
